--- a/index.html
+++ b/index.html
@@ -1,243 +1,299 @@
- <style>
-  :root{
-    --bg:#060a06;
-    --fg:#c8ffd8;              /* main phosphor text */
-    --accent:#6bff8a;          /* bright terminal green */
-    --muted:#7fbf8f;           /* secondary text */
-    --red:#ff5f5f;
-    --green:#6bff8a;
-  }
+ 
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>PU5C1VER5E</title>
 
-  html,body{height:100%}
+  <style>
+    :root{
+      --bg:#060a06;
+      --fg:#c8ffd8;
+      --accent:#6bff8a;
+      --muted:#7fbf8f;
+      --red:#ff5f5f;
+      --green:#6bff8a;
+    }
 
-  body{
-    margin:0;
-    font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji";
-    color:var(--fg);
-    background:radial-gradient(100% 140% at 50% 0%, #0b120b 0%, #050805 60%, #030503 100%);
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    overflow-x:hidden;
-  }
+    html,body{height:100%}
 
-  /* CRT overlays */
-  .crt:before{
-    content:"";
-    position:fixed;
-    inset:0;
-    pointer-events:none;
-    background:
-      repeating-linear-gradient(
+    body{
+      margin:0;
+      font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji";
+      color:var(--fg);
+      background:radial-gradient(100% 140% at 50% 0%, #0b120b 0%, #050805 60%, #030503 100%);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      overflow-x:hidden;
+    }
+
+    /* CRT overlays */
+    .crt:before{
+      content:"";
+      position:fixed;
+      inset:0;
+      pointer-events:none;
+      background:repeating-linear-gradient(
         0deg,
         rgba(107,255,138,.08) 0px,
         rgba(107,255,138,.03) 1px,
         transparent 2px
       );
-    mix-blend-mode:overlay;
-    opacity:.18;
-  }
-  .crt:after{
-    content:"";
-    position:fixed;
-    inset:0;
-    pointer-events:none;
-    background:
-      radial-gradient(60% 40% at 50% 120%, rgba(107,255,138,.14), transparent 60%);
-  }
+      mix-blend-mode:overlay;
+      opacity:.18;
+    }
 
-  .wrap{
-    max-width:960px;
-    width:100%;
-    padding:32px 20px;
-    text-align:center;
-  }
+    .crt:after{
+      content:"";
+      position:fixed;
+      inset:0;
+      pointer-events:none;
+      background:radial-gradient(60% 40% at 50% 120%, rgba(107,255,138,.14), transparent 60%);
+    }
 
-  h1{
-    font-weight:800;
-    letter-spacing:.06em;
-    text-transform:uppercase;
-    font-size:clamp(28px,6vw,64px);
-    margin:.1em 0 .2em;
-    text-shadow:0 0 18px rgba(107,255,138,.18);
-  }
+    .wrap{max-width:960px; width:100%; padding:32px 20px; text-align:center}
 
-  .brand{
-    display:inline-block;
-    padding:.18em .55em;
-    border:1px solid rgba(107,255,138,.55);
-    border-radius:12px;
-    box-shadow:
-      0 0 0 2px rgba(107,255,138,.18) inset,
-      0 0 20px rgba(107,255,138,.35);
-    background:
-      linear-gradient(180deg, rgba(107,255,138,.18), rgba(107,255,138,.05));
-    backdrop-filter:blur(2px);
-  }
+    h1{
+      font-weight:800; letter-spacing:.06em; text-transform:uppercase;
+      font-size:clamp(28px,6vw,64px); margin:.1em 0 .2em;
+      text-shadow:0 0 18px rgba(107,255,138,.18);
+    }
 
-  .subtitle{
-    max-width:46ch;
-    margin:10px auto 22px;
-    color:var(--muted);
-    font-size:clamp(18px,3.2vw,24px);
-    line-height:1.45;
-    text-shadow:0 0 14px rgba(107,255,138,.10);
-  }
+    .brand{
+      display:inline-block; padding:.18em .55em;
+      border:1px solid rgba(107,255,138,.55); border-radius:12px;
+      box-shadow:0 0 0 2px rgba(107,255,138,.18) inset, 0 0 20px rgba(107,255,138,.35);
+      background:linear-gradient(180deg, rgba(107,255,138,.18), rgba(107,255,138,.05));
+      backdrop-filter:blur(2px);
+      font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace;
+      letter-spacing:.12em;
+    }
 
-  .panel{
-    border:1px solid rgba(200,255,216,.10);
-    border-radius:16px;
-    padding:16px;
-    background:rgba(10,16,10,.35);
-    box-shadow:0 12px 40px rgba(0,0,0,.45);
-    transition:transform .15s ease;
-  }
+    .subtitle{
+      max-width:46ch; margin:10px auto 22px; color:var(--muted);
+      font-size:clamp(18px,3.2vw,24px); line-height:1.45;
+      text-shadow:0 0 14px rgba(107,255,138,.10);
+    }
 
-  .video{
-    width:100%;
-    aspect-ratio:16/9;
-    border-radius:12px;
-    background:#000;
-    display:grid;
-    place-items:center;
-    overflow:hidden;
-    box-shadow:inset 0 0 0 1px rgba(107,255,138,.12);
-  }
+    .panel{
+      border:1px solid rgba(200,255,216,.10);
+      border-radius:16px; padding:16px;
+      background:rgba(10,16,10,.35);
+      box-shadow:0 12px 40px rgba(0,0,0,.45);
+      transition:transform .15s ease;
+    }
 
-  .muted{opacity:.8}
+    .video{
+      width:100%;
+      aspect-ratio:16/9;
+      border-radius:12px;
+      background:#000;
+      display:grid;
+      place-items:center;
+      overflow:hidden;
+      box-shadow:inset 0 0 0 1px rgba(107,255,138,.12);
+    }
 
-  .meta{
-    font-size:12px;
-    color:rgba(200,255,216,.70);
-    margin-top:8px;
-  }
-  .meta a{
-    color:var(--accent);
-    text-decoration:none;
-    border-bottom:1px solid rgba(107,255,138,.35);
-  }
-  .meta a:hover{
-    border-bottom-color:rgba(107,255,138,.75);
-  }
+    .muted{opacity:.85}
 
-  .btn{
-    display:inline-block;
-    margin:18px 8px 0;
-    padding:12px 16px;
-    border-radius:999px;
-    color:#031108;
-    background:var(--accent);
-    font-weight:700;
-    letter-spacing:.02em;
-    text-decoration:none;
-    border:none;
-    cursor:pointer;
-    box-shadow:0 0 18px rgba(107,255,138,.22);
-  }
+    .meta{font-size:12px; color:rgba(200,255,216,.70); margin-top:8px}
+    .meta a{
+      color:var(--accent); text-decoration:none;
+      border-bottom:1px solid rgba(107,255,138,.35);
+    }
+    .meta a:hover{border-bottom-color:rgba(107,255,138,.75)}
 
-  .btn.ghost{
-    background:transparent;
-    color:var(--accent);
-    border:1px solid rgba(107,255,138,.55);
-    box-shadow:none;
-  }
+    .gate{
+      margin:22px auto 10px;
+      display:flex;
+      gap:8px;
+      justify-content:center;
+      flex-wrap:wrap;
+    }
 
-  .gate{
-    margin:22px auto 10px;
-    display:flex;
-    gap:8px;
-    justify-content:center;
-    flex-wrap:wrap;
-  }
+    .gate input{
+      background:#070d08;
+      border:1px solid rgba(107,255,138,.35);
+      color:var(--fg);
+      border-radius:10px;
+      padding:10px 12px;
+      min-width:180px;
+      caret-color:var(--accent);
+      outline:none;
+      transition:box-shadow .15s ease, border-color .15s ease;
+      font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace;
+      letter-spacing:.18em;
+      text-transform:uppercase;
+    }
+    .gate input::placeholder{
+      letter-spacing:.12em;
+      text-transform:none;
+      color:rgba(127,191,143,.85);
+    }
+    .gate input:focus{
+      border-color:var(--accent);
+      box-shadow:0 0 0 1px rgba(107,255,138,.7), 0 0 14px rgba(107,255,138,.55);
+    }
 
-  .gate input{
-    background:#070d08;
-    border:1px solid rgba(107,255,138,.35);
-    color:var(--fg);
-    border-radius:10px;
-    padding:10px 12px;
-    min-width:180px;
-    caret-color:var(--accent);
-    outline:none;
-    box-shadow:0 0 0 0 rgba(107,255,138,.6);
-    transition:box-shadow .15s ease, border-color .15s ease;
-    font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace;
-    letter-spacing:.18em;
-    text-transform:uppercase;
-  }
+    .btn{
+      display:inline-block;
+      margin:18px 8px 0;
+      padding:12px 16px;
+      border-radius:999px;
+      color:#031108;
+      background:var(--accent);
+      font-weight:700;
+      letter-spacing:.02em;
+      text-decoration:none;
+      border:none;
+      cursor:pointer;
+      box-shadow:0 0 18px rgba(107,255,138,.22);
+    }
 
-  .gate input::placeholder{
-    letter-spacing:.12em;
-    text-transform:none;
-    color:rgba(127,191,143,.85);
-  }
+    .stamp{
+      margin-top:14px;
+      font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace;
+      letter-spacing:.12em;
+      color:rgba(107,255,138,.85);
+      opacity:.9;
+      font-size:11px;
+      text-shadow:0 0 12px rgba(107,255,138,.18);
+    }
 
-  .gate input:focus{
-    border-color:var(--accent);
-    box-shadow:
-      0 0 0 1px rgba(107,255,138,.7),
-      0 0 14px rgba(107,255,138,.55);
-  }
+    footer{margin-top:22px; font-size:12px; color:rgba(200,255,216,.60)}
+    .err{color:var(--red); font-size:12px; margin-top:6px; min-height:16px}
+    .log{
+      margin-top:4px;
+      min-height:16px;
+      font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace;
+      font-size:11px;
+      color:rgba(107,255,138,.90);
+      opacity:.95;
+      text-shadow:0 0 12px rgba(107,255,138,.18);
+    }
 
-  .stamp{
-    margin-top:14px;
-    font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace;
-    letter-spacing:.12em;
-    color:rgba(107,255,138,.85);
-    opacity:.9;
-    font-size:11px;
-    text-shadow:0 0 12px rgba(107,255,138,.18);
-  }
+    /* shake on access denied */
+    @keyframes shake {
+      0%{transform:translateX(0)}
+      20%{transform:translateX(-4px)}
+      40%{transform:translateX(4px)}
+      60%{transform:translateX(-3px)}
+      80%{transform:translateX(3px)}
+      100%{transform:translateX(0)}
+    }
+    .shake{animation:shake .22s ease-out}
 
-  footer{
-    margin-top:22px;
-    font-size:12px;
-    color:rgba(200,255,216,.60);
-  }
+    /* flash on unlock */
+    .flash{
+      position:fixed;
+      inset:0;
+      pointer-events:none;
+      background:radial-gradient(circle at 50% 50%, rgba(107,255,138,.35), transparent 60%);
+      mix-blend-mode:screen;
+      opacity:0;
+      transition:opacity .12s ease-out;
+    }
+  </style>
+</head>
 
-  .err{
-    color:var(--red);
-    font-size:12px;
-    margin-top:6px;
-    min-height:16px;
-  }
+<body class="crt">
+  <div class="wrap">
+    <div class="brand">PU5C1VER5E</div>
+    <h1>CLASSIFIED</h1>
+    <p class="subtitle">A Psychospiritual Journey Through the Puscifer Mythos</p>
 
-  .log{
-    margin-top:4px;
-    min-height:16px;
-    font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace;
-    font-size:11px;
-    color:rgba(107,255,138,.90);
-    opacity:.95;
-    text-shadow:0 0 12px rgba(107,255,138,.18);
-  }
+    <div class="panel" id="panel">
+      <div class="video" id="videoShell">
+        <div id="locked">
+          <p class="muted">
+            This file is sealed under SCI protocol.<br/>
+            Enter clearance code to proceed.
+          </p>
 
-  /* shake on access denied */
-  @keyframes shake {
-    0%   { transform:translateX(0); }
-    20%  { transform:translateX(-4px); }
-    40%  { transform:translateX(4px); }
-    60%  { transform:translateX(-3px); }
-    80%  { transform:translateX(3px); }
-    100% { transform:translateX(0); }
-  }
-  .shake{
-    animation:shake .22s ease-out;
-  }
+          <div class="gate">
+            <input id="code" placeholder="Access code" aria-label="Access code" autocomplete="one-time-code" />
+            <button class="btn" id="unlockBtn">Unlock</button>
+          </div>
 
-  /* flash / glitch on unlock */
-  .flash{
-    position:fixed;
-    inset:0;
-    pointer-events:none;
-    background:radial-gradient(circle at 50% 50%, rgba(107,255,138,.35), transparent 60%);
-    mix-blend-mode:screen;
-    opacity:0;
-    transition:opacity .12s ease-out;
-  }
-</style>
+          <div id="err" class="err"></div>
+          <div id="log" class="log">&gt;&gt; ENTER ACCESS CODE TO INITIATE UPLINK…</div>
+          <div class="stamp">CLEARANCE LEVEL: SCI &nbsp;•&nbsp; FILE: T is for TAROT_PROJECT</div>
+        </div>
+      </div>
 
+      <div class="meta">
+        Don’t have the code? Request access:
+        <a href="mailto:evans.jimw@gmail.com">evans.jimw@gmail.com</a>
+      </div>
+    </div>
 
+    <footer>© J. Evans — Prototype materials for private review only.</footer>
+  </div>
 
+  <div class="flash" id="flash"></div>
 
+  <script>
+    const PASS = "PROBE";
 
+    // Vimeo intro (plays after unlock)
+    const VIDEO_URL = "https://player.vimeo.com/video/1128635365?autoplay=1&muted=1&title=0&byline=0&portrait=0";
+
+    const codeInput = document.getElementById('code');
+    const err = document.getElementById('err');
+    const log = document.getElementById('log');
+    const panel = document.getElementById('panel');
+    const flash = document.getElementById('flash');
+    const unlockBtn = document.getElementById('unlockBtn');
+
+    codeInput.focus();
+
+    // Enter key should unlock
+    codeInput.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter') unlock();
+    });
+
+    // Button unlock
+    unlockBtn.addEventListener('click', (e) => {
+      e.preventDefault();
+      unlock();
+    });
+
+    function unlock(){
+      const v = codeInput.value.trim();
+
+      if (v.toUpperCase() === PASS){
+        log.textContent = ">> ACCESS GRANTED. ESTABLISHING UPLINK…";
+        err.textContent = "";
+
+        flash.style.opacity = "1";
+        setTimeout(() => flash.style.opacity = "0", 120);
+
+        injectVideo();
+      } else {
+        err.textContent = "ACCESS DENIED.";
+        log.textContent = ">> INVALID CODE. CHECK CLEARANCE AND RETRY.";
+        panel.classList.add('shake');
+        setTimeout(() => {
+          panel.classList.remove('shake');
+          err.textContent = "";
+        }, 550);
+      }
+    }
+
+    function injectVideo(){
+      const shell = document.getElementById('videoShell');
+      shell.innerHTML = `
+        <iframe
+          src="${VIDEO_URL}"
+          title="PU5C1VER5E — Intro"
+          allow="autoplay; encrypted-media; fullscreen; picture-in-picture"
+          allowfullscreen
+          style="width:100%;height:100%;border:0;border-radius:12px;">
+        </iframe>
+      `;
+    }
+  </script>
+</body>
+</html>
